dodanie styli do ul

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             padding: 10px;
             margin-bottom: 10px;
         }
-        .user > ul{
+        .gory > ul{
             list-style: none;
         }
     </style>
