--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
         .gory > ul{
             list-style: none;
         }
+        h1{
+            background-color: #213769;
+            color: #f4f5f6;
+            text-align: center;
+            font-size: 20px;
+            padding: 10px;
+        }
     </style>
 </head>
 <body>
