Zmiana nazw w li

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                        <img src="${gory[i].img}" width="90" height="90" />
                         <ul>
                             <li>ID: ${gory[i].id}</li>
-                            <li>TITLE: ${gory[i].title}</li>
-                            <li>NAME: ${gory[i].name}</li>
+                            <li>PASMO GÓR: ${gory[i].title}</li>
+                            <li>NAZWA GÓRY: ${gory[i].name}</li>
                         </ul>
                         </div>
                        `; 
