lekkie dopracowanie strony (koniec prac)

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             display: flex;
             padding: 10px;
             margin-bottom: 10px;
+            font-family: Verdana;
         }
         .gory > ul{
             list-style: none;
@@ -19,7 +20,7 @@
             background-color: #213769;
             color: #f4f5f6;
             text-align: center;
-            font-size: 20px;
+            font-size: 50px;
             padding: 10px;
         }
     </style>
