zmiana z kliknięcia buttona na kliknięcie h1 :>

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     </style>
 </head>
 <body>
-    <button id="przycisk">Klikej synu</button>
-    <h1>Góry w Polsce</h1>
+    <h1 id="przycisk">Góry w Polsce</h1>
     <div id="gory1"></div>
     <script>
         document.getElementById("przycisk").addEventListener("click",zaladujGory);
